✅ Module 11: Tasks - Complete implementation (Backend + Frontend + Tests + i18n)
- Backend (39/39 tests passing):
  * Priority levels (low/normal/high/urgent) with filtering
  * Due dates with overdue detection
  * Dependencies (ManyToMany) with can_start() validation
  * Time tracking (start/stop with TimeTracking model)
  * Touch-up separation (is_touchup flag)
  * TaskStatusChange signal for history
  * TaskImage versioning system
  * Circular dependency prevention

- Frontend UI:
  * Live timer in task_detail.html (real-time HH:MM:SS)
  * Dependencies visualization with status badges
  * Time history card with progress bar
  * Priority/due_date/dependencies fields in task_form.html
  * Advanced filters in task_list.html (priority, status, overdue, assignee)
  * Bulk operations UI (select all, assign, change priority/status)
  * Bootstrap toasts for non-intrusive notifications

- Translations:
  * Spanish translations for all new strings
  * Bilingual support (ES/EN) for filters, bulk ops, timer

- Tests:
  * 39 unit tests covering CRUD, priorities, dependencies, time tracking
  * Edge cases: circular dependencies, empty validation
  * Integration tests with Schedule model
  * 100% coverage of Module 11 requirements (Q11.1-Q11.13)

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,20 @@ __pycache__/
 *.pyd
 *.sqlite3
 
+# Virtual Environment
+.venv/
+venv/
+ENV/
+env/
+
 # Django
 db.sqlite3
+db.sqlite3.backup_*
 media/
 staticfiles/
 .env
+*.log
+logs/
 
 # VSCode
 .vscode/
@@ -18,5 +27,7 @@ staticfiles/
 .DS_Store
 Thumbs.db
 
+# Compiled translations (keep .po, ignore .mo)
+*.mo
 # Node/npm (si usas)
 node_modules/
