FASE 1 Complete: Tests & API endpoints
Unit Tests (16/16 passed):
- Task.reopen() validation (status change, history, completed_at clear)
- DailyLog.instantiate_planned_templates() idempotent logic
- DailyLog.evaluate_completion() summary calculation
- WeatherSnapshot TTL caching and staleness detection
- TaskTemplate.create_task() instantiation with overrides

API Endpoints (15/15 tests passed):
- DailyLogPlanningViewSet: CRUD + instantiate_templates + evaluate_completion + weather actions
- TaskTemplateViewSet: CRUD + fuzzy search + create_task action
- WeatherSnapshotViewSet: Read-only + by_project_date filter

Fixes:
- Normalize TaskTemplate.PRIORITY_CHOICES to match Task (low/medium/high/urgent)
- Remove invalid 'updated_at' field from TaskSerializer
- Add 'api' marker to pytest.ini

Files:
- tests/test_phase1_features.py: Comprehensive unit tests
- tests/test_phase1_api.py: Full API integration tests
- core/api/serializers.py: TaskTemplate, WeatherSnapshot, DailyLogPlanning serializers
- core/api/views.py: ViewSets with custom actions
- core/api/urls.py: Router registration
- core/migrations/0076_*.py: Priority normalization migration

All tests passing. Ready for Phase 2 deployment.

--- a/pytest.ini
+++ b/pytest.ini
@@ -12,6 +12,7 @@ norecursedirs = tests/e2e e2e .git __pycache__ *.egg-info dist build
 markers =
     unit: Unit tests (fast, isolated)
     integration: Integration tests (slower, DB access)
+    api: API endpoint tests (REST framework)
     slow: Slow running tests
     module_11: Tests for Module 11 (Tasks)
     module_12: Tests for Module 12 (Daily Plans)
