--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,28 @@
 [tool.ruff]
+target-version = "py39"
+line-length = 100
+exclude = [
+  ".venv",
+  "**/__pycache__",
+  "db.sqlite3",
+]
+
+[tool.ruff.lint]
+select = [
+  "E",  # pycodestyle errors
+  "F",  # pyflakes
+  "B",  # bugbear
+  "I",  # isort
+]
+ignore = [
+  "E501",  # line length handled by formatter
+]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+line-ending = "lf"
+[tool.ruff]
 line-length = 120
 target-version = "py311"
 exclude = [
