--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,21 +11,23 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "frappe-gantt": "^0.6.1",
     "axios": "^1.6.0",
     "date-fns": "^3.0.0",
+    "frappe-gantt": "^0.6.1",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
-    "html2canvas": "^1.4.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.10.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.0",
+    "@types/node": "^20.10.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "sass-embedded": "^1.93.3",
     "typescript": "^5.3.3",
-    "vite": "^5.0.8",
-    "@playwright/test": "^1.40.0",
-    "@types/node": "^20.10.0"
+    "vite": "^5.0.8"
   }
 }
