--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, chore/** ]
   pull_request:
     branches: [ main ]
 
@@ -11,34 +11,59 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11"]
+        python: [3.11]
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.python }}
+      - name: Install dependencies
+        run: |
+          python -m venv .venv
+          . .venv/bin/activate
+          pip install -r requirements.txt
+      - name: Run Django checks
+        run: .venv/bin/python manage.py check
+      - name: Lint (ruff)
+        run: .venv/bin/ruff check .
+      - name: Security scan (bandit)
+        run: .venv/bin/bandit -r core -f json -o reports/bandit_core.json || true
+      - name: Run tests with coverage
+        run: .venv/bin/python -m coverage run -m pytest
+      - name: Upload coverage
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-html
+          path: reports/coverage_html
+name: CI
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
+          cache: 'pip'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run linters (mypy + flake8)
-        run: |
-          pip install mypy flake8
-          mypy . || true
-          flake8 || true
-      - name: Run tests
+          pip install ruff mypy pytest
+      - name: Lint (ruff)
+        run: ruff check .
+      - name: Typecheck (mypy)
+        run: mypy . --config-file mypy.ini
+      - name: Tests (pytest)
         env:
-          CI: true
-        run: |
-          pip install pytest
-          pytest -q
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results-${{ matrix.python-version }}
-          path: test-results
-          if-no-files-found: ignore
-
-# Nota: si se desea cobertura, se puede añadir un paso de cobertura con coverage.py
+          DJANGO_SETTINGS_MODULE: kibray_backend.settings
+        run: pytest -q
