--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,37 @@
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
-*.py[cod]
-*$py.class
+*.pyc
+*.pyo
+*.pyd
+*.sqlite3
 
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-dist/
-*.egg-info/
-.eggs/
-
-# Virtualenv
-.env
-.venv
+# Virtual Environment
+.venv/
 venv/
 ENV/
-
-# Pytest
-.pytest_cache/
-.coverage
-coverage.xml
-htmlcov/
-
-# Test outputs / logs
-runserver.out
-test-results/
-reports/
-
-# Editor directories and files
-.vscode/
-.idea/
-*.suo
-*.user
-*.userosscache
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# Misc accidental files
-gitignore
-* (edit)
-* (edit)*
+env/
 
 # Django
 db.sqlite3
 db.sqlite3.backup_*
 media/
 staticfiles/
+.env
 *.log
 logs/
 
+# Backups directory and explicit DB backups
+backups/
+db_backup_*.sqlite3
+
+# VSCode
+.vscode/
+
+# Mac/Windows
+.DS_Store
+Thumbs.db
+
 # Compiled translations (keep .po, ignore .mo)
 *.mo
-
-# Node/npm
+# Node/npm (si usas)
 node_modules/
