--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,8 @@ addopts =
     --tb=short
     --strict-markers
     -k "not e2e"
+    --cov=.
+    --cov-report=term-missing
 ; Exclude e2e tests that require Playwright from collection
 norecursedirs = tests/e2e e2e .git __pycache__ *.egg-info dist build
 
