ci: enable manual workflow_dispatch for tests workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,6 +5,7 @@ on:
     branches: [ chore/security/upgrade-django-requests ]
   pull_request:
     branches: [ chore/security/upgrade-django-requests ]
+  workflow_dispatch:
 
 jobs:
   test:
