--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+      "build:navigation": "webpack --mode production --config webpack.config.cjs",
     "preview": "vite preview",
     "watch": "vite build --watch",
     "test:e2e": "playwright test"
@@ -16,18 +17,27 @@
     "frappe-gantt": "^0.6.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "lucide-react": "^0.555.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.10.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
     "@playwright/test": "^1.57.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
     "sass-embedded": "^1.93.3",
+    "style-loader": "^4.0.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "webpack": "^5.103.0",
+    "webpack-cli": "^6.0.1"
   }
 }
