--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "lucide-react": "^0.555.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.10.0"
+    "recharts": "^2.10.0",
+    "react-grid-layout": "^1.3.4",
+    "react-resizable": "^3.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
