--- a/frontend/navigation/package.json
+++ b/frontend/navigation/package.json
@@ -9,6 +9,10 @@
     "clean": "rm -rf ../../static/js/kibray-navigation.js"
   },
   "dependencies": {
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.5.1",
+    "react-i18next": "^14.1.3",
     "date-fns": "^2.30.0",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.294.0",
