--- a/frontend/navigation/package.json
+++ b/frontend/navigation/package.json
@@ -5,15 +5,16 @@
   "private": true,
   "scripts": {
     "dev": "webpack --mode development --watch",
-    "build": "webpack --mode production",
+    "build": "NODE_ENV=production webpack --mode production",
     "clean": "rm -rf ../../static/js/kibray-navigation.js"
   },
   "dependencies": {
+    "date-fns": "^2.30.0",
+    "firebase": "^12.6.0",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.5.1",
-    "react-i18next": "^14.1.3",
-    "date-fns": "^2.30.0",
+    "idb": "^7.1.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.294.0",
     "process": "^0.11.10",
@@ -21,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-grid-layout": "^1.4.4",
+    "react-i18next": "^14.1.3",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^7.9.6",
     "recharts": "^2.10.0",
@@ -45,6 +47,8 @@
     "playwright": "^1.57.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "workbox-webpack-plugin": "^7.0.0",
+    "workbox-window": "^7.0.0"
   }
 }
