feat: Add OpenAI API diagnostic tool and Railway setup guide
- Created diagnose_openai_api.py: comprehensive API verification script
- Updated .env.example with OPENAI_API_KEY configuration
- Added RAILWAY_OPENAI_SETUP.md: complete setup guide for Railway deployment
- Includes troubleshooting, security best practices, and cost monitoring

--- a/.env.example
+++ b/.env.example
@@ -73,6 +73,19 @@ SENTRY_DSN=https://your-sentry-dsn@sentry.io/project-id
 SENTRY_ENVIRONMENT=production  # development, staging, or production
 
 # ==============================================================================
+# OPENAI API (AI Features)
+# ==============================================================================
+# Required for AI-powered features:
+# - AI SOP Generator
+# - Daily Plan AI Assistant  
+# - Quick Planner AI
+# - Strategic Planner AI
+# - NLP Command Processing
+# Get your key at: https://platform.openai.com/api-keys
+OPENAI_API_KEY=sk-your-openai-api-key-here
+OPENAI_MODEL=gpt-4o-mini  # Cost-effective default (gpt-3.5-turbo, gpt-4, gpt-4-turbo also available)
+
+# ==============================================================================
 # API CONFIGURATION
 # ==============================================================================
 API_BASE_URL=https://api.kibray.com
