--- a/pytest.ini
+++ b/pytest.ini
@@ -24,6 +24,7 @@ markers =
     api: API endpoint tests (REST framework)
     websocket: WebSocket consumer tests (Phase 6)
     slow: Slow running tests
+    summary: Test suite summary documentation
     module_11: Tests for Module 11 (Tasks)
     module_12: Tests for Module 12 (Daily Plans)
     module_13: Tests for Module 13 (SOPs/Templates)
