Expose financial reporting and client portal APIs

--- a/pytest.ini
+++ b/pytest.ini
@@ -32,3 +32,4 @@ markers =
     module_29: Tests for Module 29 (Pre-Task Library)
     module_30: Tests for Module 30 (Weather)
     module_31: Tests for Module 31 (Digital Signatures)
+    override_settings: Django settings override for tests
