--- a/requirements_enhanced.txt
+++ b/requirements_enhanced.txt
@@ -6,12 +6,14 @@
 # Core Django
 Django==4.2.7
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+drf-spectacular==0.27.2
 django-cors-headers==4.3.0
 django-filter==23.3
 
 # Database & Caching
 psycopg2-binary==2.9.9
-redis==5.0.1
+redis==4.5.4
 django-redis==5.4.0
 
 # Async & Background Tasks
@@ -28,6 +30,8 @@ daphne==4.0.0
 # Authentication & Security
 django-allauth==0.57.0
 django-otp==1.3.0
+django-crispy-forms==2.3
+crispy-bootstrap5==0.7
 qrcode==7.4.2
 PyJWT==2.8.0
 cryptography==41.0.7
@@ -40,7 +44,7 @@ django-storages==1.14.2
 
 # PDF Generation
 xhtml2pdf==0.2.11
-reportlab==4.0.7
+reportlab==3.6.12
 WeasyPrint==60.1  # Better PDF engine
 pypdf==3.17.1
 
@@ -75,7 +79,6 @@ plaid-python==16.0.0  # Banking integration
 # Email
 sendgrid==6.11.0
 django-ses==3.5.2  # AWS SES
-celery-email==0.2.0
 
 # Notifications
 twilio==8.11.1  # SMS
@@ -84,10 +87,9 @@ firebase-admin==6.3.0  # Push notifications
 # API & Webhooks
 requests==2.31.0
 httpx==0.25.2
-webhooks==1.0.2
 
 # Integrations
-quickbooks-online==0.8.1  # QuickBooks
+python-quickbooks==0.9.4  # QuickBooks
 google-api-python-client==2.108.0  # Google Calendar
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.0
@@ -104,7 +106,6 @@ gunicorn==21.2.0
 whitenoise==6.6.0
 
 # Weather API
-python-weather-api==1.1.1
 pyowm==3.3.0  # OpenWeatherMap
 
 # Barcode/QR
@@ -115,6 +116,7 @@ pyzbar==0.1.9  # Barcode scanning
 pytest==7.4.3
 pytest-django==4.7.0
 pytest-cov==4.1.0
+pytest-asyncio==0.21.1
 factory-boy==3.3.0
 faker==20.1.0
 
