--- a/frontend/gantt/package.json
+++ b/frontend/gantt/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "kibray-gantt",
-  "version": "1.0.0",
+  "name": "gantt",
   "private": true,
-  "description": "Kibray Gantt frontend powered by React Modern Gantt",
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "webpack --mode development --watch",
-    "build": "NODE_ENV=production webpack --mode production",
-    "clean": "rm -rf ../../static/gantt/*"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "date-fns": "^2.30.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-  "react-modern-gantt": "^0.6.1"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.0",
-    "@babel/preset-env": "^7.28.5",
-    "@babel/preset-react": "^7.28.5",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^6.8.1",
-    "style-loader": "^3.3.3",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "@eslint/js": "^9.39.1",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.4",
+    "vite": "^7.2.4"
   }
 }
