chore: Cleanup obsolete files - Remove debug/test scripts (tmp_invoice_test, debug_*, check_invoice_*) - Remove auth.json with session tokens - Add auth.json and playwright-auth.json to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,10 @@ settings_old.py.backup
 firebase-service-account.json
 *-firebase-adminsdk-*.json
 
+# Test/dev auth tokens
+auth.json
+playwright-auth.json
+
 # Testing
 .coverage
 htmlcov/
